# SWE_10776_Group3

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
client/: README_FORMS.md  example.env  package-lock.json  package.json  pnpm-lock.yaml
client/app/: api.ts  api.tsx  app.css  context.ts  root.tsx  routes.ts
client/app/+types/: _index.d.ts  root.d.ts
client/app/components/: ListingCard.tsx  backbutton.tsx  listcard.tsx  logo.tsx  navbar.tsx  notification.tsx  (+1 more)
scripts/: init.sql
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  example.env  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 00095ee96aa1_added_profile_pic_to_user_data.py  14a691c9dce8_added_image_to_listing_model_and_.py  3a0b11327dbb_added_listing_model.py  714c6fc32e71_init_users.py  7c01e5d856f8.py  8413fa38c7b5_add_important_user_fields.py  d3da7f1d5fa9_added_category_and_condition_enums.py  ddec9cc156a3_init_auth_tables.py  ed9ce4ee249e_added_isbanned_column.py  fa94903592a7_added_is_banned_attribute.py
server/app/: main.py
server/app/api/: about.py  admin.py  auth.py  listings.py  profile.py
server/app/auth/: auth.py  backend.py  models.py  routers.py  schemas.py
server/app/core/: config.py
server/app/db/: database.py  init.sql
server/app/models/: __init__.py  access_token.py  base.py  listing.py  user.py  verification.py
server/app/schemas/: listing.py  pagination.py  user.py
server/app/users/: models.py
(+33 files in other folders)
